--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build
-      run: sh ./build.sh
+      run: sudo apt-get install fsharp && sh ./build.sh
