--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -15,23 +15,28 @@
     <OutputPath>..\..\bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Prelude\Logging.fs" />
-    <Compile Include="Prelude\FSLibExtensions.fs" />
-    <Compile Include="Prelude\Math.fs" />
-    <Compile Include="Prelude\Measures.fs" />
-    <Compile Include="Prelude\Lens.fs" />
-    <Compile Include="Prelude\Monoid.fs" />
-    <Compile Include="Prelude\AverageWindow.fs" />
-    <Compile Include="Interop\Converters.fs" />
-    <Compile Include="Interop\Dictionary.fs" />
-    <Compile Include="Interop\Symbol.fs" />
-    <Compile Include="Interop\Vectors.fs" />
-    <Compile Include="Interop\Matrix.fs" />
-    <Compile Include="Interop\String.fs" />
-    <Compile Include="Interop\SortedSet.fs" />
-    <Compile Include="Interop\HashSet.fs" />
-    <Compile Include="Interop\CSharpList.fs" />
-    <Compile Include="Interop\ArraySegment.fs" />
+    <Compile Include="Utilities\Logging.fs" />
+    <Compile Include="Utilities\Interop\FSLibExtensions.fs" />
+    <Compile Include="Utilities\Interop\Dictionary.fs" />
+    <Compile Include="Utilities\Interop\Symbol.fs" />
+    <Compile Include="Utilities\Interop\String.fs" />
+    <Compile Include="Utilities\Interop\Strings.fs" />
+    <Compile Include="Utilities\Interop\SortedSet.fs" />
+    <Compile Include="Utilities\Interop\HashSet.fs" />
+    <Compile Include="Utilities\Interop\CSharpList.fs" />
+    <Compile Include="Utilities\Interop\ArraySegment.fs" />
+    <Compile Include="Utilities\Pickler\FsPicklerExtensions.fs" />
+    <Compile Include="Utilities\Pickler\AdaptivePicklers.fs" />
+    <Compile Include="Utilities\Measures.fs" />
+    <Compile Include="Utilities\Lens.fs" />
+    <Compile Include="Utilities\Monoid.fs" />
+    <Compile Include="Utilities\Monads.fs" />
+    <Compile Include="Math\Math.fs" />
+    <Compile Include="Math\Vectors.fs" />
+    <Compile Include="Math\Matrix.fs" />
+    <Compile Include="Math\SVDM33f.fs" />
+    <Compile Include="Math\AverageWindow.fs" />
+    <Compile Include="Math\Converters.fs" />
     <Compile Include="Datastructures\Mutable\FixedSizeArray.fs" />
     <Compile Include="Datastructures\Mutable\Order.fs" />
     <Compile Include="Datastructures\Mutable\OrderMaintenance.fs" />
@@ -69,23 +74,19 @@
     <Compile Include="Runtime\Fragments.fs" />
     <Compile Include="Runtime\CustomSchedulers.fs" />
     <Compile Include="Runtime\Caches.fs" />
-    <Compile Include="SVDM33f.fs" />
-    <Compile Include="String.fs" />
-    <Compile Include="Runtime.fs" />
-    <Compile Include="Control.fs" />
-    <Compile Include="FsPicklerExtensions.fs" />
-    <Compile Include="AdaptivePicklers.fs" />
-    <Compile Include="Ag.fs" />
-    <None Include="paket.references" />
     <Compile Include="Native\BlobStore.fs" />
     <Compile Include="Native\Pointer.fs" />
     <Compile Include="Native\Memory.fs" />
     <Compile Include="Native\FileTable.fs" />
     <Compile Include="Native\Manager.fs" />
     <Compile Include="Native\Store.fs" />
+    <Compile Include="Runtime.fs" />
+    <Compile Include="Ag.fs" />
+    <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
